<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_btn_white_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.67dp"
        android:background="@color/app_base_color" />

    <TextView
        android:id="@+id/txt_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="content"
        android:textSize="16sp"
        android:textColor="@color/time_color_current_chat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_trans_border"
            android:text="@string/login_button_no"
            android:textColor="@color/button_login"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_trans_border"
            android:text="@string/login_button_yes"
            android:textColor="@color/button_login"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>