<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4282bf">

    <!-- @color/app_base_color -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusableInTouchMode="true"
            android:padding="30dp">


            <!-- w : match_parent -->
            <!-- h : wrap_content-->
            <!-- @drawable/loading_ic_store -->
            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="50dp">

                <ImageView
                    android:id="@+id/img_login_logo"
                    android:layout_width="160dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/loading_ic_main_bootrap"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tv_login_logo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_login_logo"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll_login_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_login_logo_text"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/login_edt_server"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@null"
                        android:hint="@string/string_server_site"
                        android:inputType="text"
                        android:paddingEnd="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="0dp"
                        android:paddingStart="5dp"
                        android:singleLine="true"

                        android:textColor="@android:color/white"
                        android:textColorHint="#A0FFFFFF"
                        android:textCursorDrawable="@null"
                        android:textSize="17sp"
                        android:visibility="visible" />
                    <!--android:text="wine.woorihom.com"-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.67dp"
                        android:background="#A0FFFFFF"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/login_edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="2dp"
                        android:background="@null"
                        android:hint="@string/login_username"
                        android:inputType="text"
                        android:paddingEnd="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="0dp"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="#A0FFFFFF"
                        android:textCursorDrawable="@null"
                        android:textSize="17sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.67dp"
                        android:background="#A0FFFFFF" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="43dp"
                            android:layout_marginTop="2dp"
                            android:background="@null"
                            android:hint="@string/login_password"
                            android:inputType="textPassword"
                            android:paddingEnd="0dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="0dp"
                            android:paddingStart="5dp"
                            android:textColor="@android:color/white"
                            android:textColorHint="#A0FFFFFF"
                            android:textCursorDrawable="@null"
                            android:textSize="17sp" />
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.67dp"
                        android:background="#A0FFFFFF" />

                    <RelativeLayout
                        android:id="@+id/login_btn_login"
                        style="@style/LoginButton"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginTop="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/login_login"
                                android:textColor="#ffffff"
                                android:textSize="17sp" />

                        </RelativeLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_login_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/ll_login_info"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="0dp"
                        android:paddingStart="5dp"
                        android:text="@string/sign_up_suggest"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <RelativeLayout
                        android:id="@+id/login_btn_sign_up"
                        style="@style/SignupButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/ic_group_add_white_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/string_sign_up"
                                android:textColor="#ffffff"
                                android:textSize="17sp" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rl_login"
                android:layout_marginBottom="50dp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_bottom" />

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>