<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/start_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:scrollbars="vertical"
            android:fadeScrollbars="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:background="#F3F3F3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sep_title_mobileService"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>

                <org.apmem.tools.layouts.FlowLayout
                    android:id="@+id/fl_enabled_applications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:background="#FFFFFF" />

                <!--Approval-->
                <RelativeLayout
                    android:id="@+id/rl_approval_documents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:background="#F3F3F3"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sep_title_approval"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_approval_documents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#FFFFFF"
                    android:visibility="gone" />

                <!--Mail-->
                <RelativeLayout
                    android:id="@+id/rl_unread_mails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#F3F3F3"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sep_title_email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_unread_mails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#FFFFFF"
                    android:visibility="gone" />

                <!--Schedule-->
                <RelativeLayout
                    android:id="@+id/rl_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#F3F3F3"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sep_title_schedule"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:visibility="gone" />

                <!--Notice-->
                <RelativeLayout
                    android:id="@+id/rl_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#F3F3F3"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_sep_title_notice"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu_start_drawer" />

</android.support.v4.widget.DrawerLayout>